--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.3.0",
     "vue-template-compiler": "^2.6.11"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  }
 }
