--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
   "name": "vue-glow",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+  "main": "dist/VueGlow.umd.js",
+  "module": "dist/VueGlow.esm.js",
+  "unpkg": "dist/VueGlow.min.js",
+  "browser": {
+    "./sfc": "src/VueGlow.vue"
   },
-  "dependencies": {
-    "node-sass": "^4.14.0",
-    "sass-loader": "^8.0.2",
-    "vue": "^2.6.11"
+  "files": [
+    "dist/*"
+  ],
+  "vetur": {
+    "tags": "tags.json",
+    "attributes": "attributes.json"
+  },
+  "scripts": {
+    "build": "npm run build:unpkg & npm run build:es & npm run build:umd",
+    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/VueGlow.umd.js",
+    "build:es": "rollup --config build/rollup.config.js --format es --file dist/VueGlow.esm.js",
+    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/VueGlow.min.js"
   },
   "devDependencies": {
-    "@vue/cli-service": "~4.3.0",
-    "vue-template-compiler": "^2.6.11"
+    "minimist": "^1.2.0",
+    "rollup": "^1.14.4",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-uglify-es": "0.0.1",
+    "rollup-plugin-vue": "^4.7.2",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
   }
 }
