--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-glow",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist/VueGlow.umd.js",
   "module": "dist/VueGlow.esm.js",
   "unpkg": "dist/VueGlow.min.js",
@@ -20,6 +20,9 @@
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/VueGlow.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/VueGlow.min.js"
   },
+  "dependencies": {
+    "vue": "^2.6.10"
+  },
   "devDependencies": {
     "minimist": "^1.2.0",
     "rollup": "^1.14.4",
@@ -28,7 +31,6 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-plugin-vue": "^4.7.2",
-    "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   }
 }
